# aims_core

./: README.md
.github/workflows/: ci_bionic.yml
core/: CMakeLists.txt  package.xml
core/launch/: move_group_python_interface_tutorial.launch
core/scripts/: move_group_python_interface_tutorial.py  robot_dance.py
gazebo/gazebo_mh5_control/config/: mh5_control.yaml
gazebo/gazebo_mh5_control/launch/: mh5_control.launch
gazebo/gazebo_world/launch/: mh5_room900_world.launch
gazebo_control/gazebo_mh5_control/: CMakeLists.txt  package.xml
gazebo_world/: CMakeLists.txt  package.xml
gazebo_world/worlds/: room900.world
motoman/: README.md
motoman/motoman_driver/src/: joint_trajectory_streamer.cpp
motoman/motoman_mh5_support/launch/: test_mh5.launch
motoman_ms210_moveit_config/config/: ompl_planning.yaml  ros_controllers.yaml
motoman_ms210_moveit_config/launch/: motoman_ms210_moveit_controller_manager.launch.xml
motoman_ms210_support/: CMakeLists.txt  package.xml
motoman_ms210_support/config/: joint_names_ms210.yaml
motoman_ms210_support/launch/: robot_interface_streaming_ms210.launch
motoman_ms210_support/meshes/: link_s.STL
motoman_ms210_support/urdf/: ms210.csv  ms210.urdf  ms210_macro.xacro
moveit/motoman_ms210_moveit_config/: .setup_assistant  package.xml
moveit/moveit_mh5_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/moveit_mh5_pgn64_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/moveit_mh5_pgn64_support/: .setup_assistant  CMakeLists.txt  package.xml
moveit_mh5_config/config/: bot_mh5.srdf  controllers.yaml  ros_controllers.yaml
moveit_mh5_config/launch/: bot_mh5_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo_gazebo.launch  gazebo.launch  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  ros_controllers.launch  warehouse.launch
schunk_pgn64_support/: CMakeLists.txt  package.xml
schunk_pgn64_support/config/: joint_names_mh5.yaml
schunk_pgn64_support/launch/: load_pgn64.launch  test_pgn64.launch
schunk_pgn64_support/meshes/pgn64/visual/: PGN64_SOLID.stl
schunk_pgn64_support/urdf/: mh5_with_pgn64.urdf  mh5_with_pgn64.xacro  mh5_with_pgn64_macro.xacro  pgn64.gazebo  pgn64_macro.xacro
(+75 files in other folders)
